# oci-package-proxy

./: .gitignore  .terraformrc  Dockerfile  Dockerfile.test  LICENSE  go.mod  go.sum  main.go  packages.yaml  readme.md
cmd/: generate.go  registry.go  root.go
docs/: architecture.md  oci-constructs.md  python-pypi.md  terraform-provider.md  upload-endpoint.md
e2e/python/: .gitignore  readme.md
e2e/python/consumer/: consume_example.py  install_package.sh  requirements.txt
e2e/python/producer/: publish_example_package.sh
e2e/python/producer/example_package/: pyproject.toml
e2e/terraform-provider/consumer/: main.tf
e2e/terraform-provider/producer/: .goreleaser.yml  build_with_goreleaser.sh  go.mod  go.sum  main.go
example/: main.tf
hack/: cert.go
internal/devcert/: devcert.go
pkg/config/: config.go
pkg/core/: core.go
pkg/registries/auth/: auth.go  auth_test.go
pkg/registries/python/: registry.go  registry_test.go
pkg/registries/python/sample/consumer/: pyproject.toml  script.py
pkg/registries/python/sample/producer/: pyproject.toml
pkg/registries/terraform/: packageConfig.go  registry.go  registry_test.go
pkg/registries/terraform/sample/: .goreleaser.yml  go.mod  main.go  release.sh
pkg/registry/: server.go
pkg/registry/python/: generator.go
pkg/registry/terraform/: registry.go  registry_test.go
pkg/registry/terraform/sample/: .goreleaser.yml  release.sh
pkg/store/: oci.go  oci_test.go
pkg/testutils/: container.go
scripts/: build_test_image.sh  install_cert.sh  upload_provider.sh
(+1 files in other folders)
