[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package"
version = "0.1.0"
description = "An example Python package for testing PyPI registry"
authors = [
    {name = "Test Author", email = "test@example.com"}
]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.6"

[tool.setuptools]
packages = ["example_package"]
