[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-package"
version = "0.1.0"
description = "A test package for integration testing"
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.setuptools]
packages = ["test_package"]
